Added a REST API call for exploring collaborations between (sub-)organizations
